<resources>
    <string name="app_name">roc-droid</string>
    <string name="start_send">start sending</string>
    <string name="stop_send">stop sending</string>
    <string name="start_receive">start receiving</string>
    <string name="stop_receive">stop receiving</string>
    <string name="device_ip">device ip:</string>
    <string name="ip_characters">1234567890.:</string>
    <string name="senderLabel">Sender:</string>
    <string name="server_ip">Server IP</string>
    <string name="receiver_label">Receiver:</string>
    <string name="not_connected">Not connected</string>
    <string name="connected">Connected</string>
    <string name="ip_placeholder">IP: xxx.xxx.xxx.xxx</string>
    <string name="server_name_placeholder">Server Name</string>
    <string name="audio_port">Audio Port</string>
    <string name="error_correction">Error Correction Port</string>
    <string name="select_server">Select Server</string>
    <string name="stop_stream">Stop Stream</string>
    <string name="refresh">refresh</string>
    <string name="select_control_server">Select Control server</string>
    <string name="connect_to_control_server">Connect to Control Server</string>
    <string name="disconnect_from_control_server">Disconnect from control server</string>
    <string name="sending">Sending</string>
    <string name="receiving">Receiving</string>
    <string name="advanced">Advanced</string>
    <string name="send">Send</string>
    <string name="recv">Receive</string>
    <string name="update_settings">Update Settings</string>
    <string name="connecting">Connecting …</string>
    <string name="mute">mute</string>
    <string name="unmute">unmute</string>
    <string name="deaf">Deaf</string>
    <string name="autoupdate">autoupdate</string>
    <string name="cancel">Cancel</string>
</resources>
