<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/serverLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/select_control_server"
            app:layout_constraintStart_toStartOf="@id/ipControlSelect"
            app:layout_constraintTop_toTopOf="parent" />


        <Spinner
            android:id="@+id/ipControlSelect"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:digits="@string/ip_characters"
            android:ems="10"
            android:hint="@string/server_ip"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imageButton"
            app:layout_constraintTop_toBottomOf="@id/serverLabel" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/refresh"
            android:onClick="refreshServerList"
            android:layout_marginEnd="56dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_refresh_24" />


        <Button
            android:id="@+id/sendButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="56dp"
            android:layout_marginVertical="24dp"
            android:onClick="toggleControl"
            android:text="@string/connect_to_contol_server"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ipControlSelect" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>